[feat] #30 복기 노트 API 테스트 코드